@@ -45,10 +45,11 @@ following columns:
 - id: an int4 identifier of the edge
 - source: an int4 identifier of the source vertex
 - target: an int4 identifier of the target vertex
-- cost: an float8 value, of the edge traversal cost
+- cost: an float8 value, of the edge traversal cost. (a negative cost
+   will prevent the edge from being inserted in the graph).
 - reverse_cost (optional): the cost for the reverse traversal of the
  edge. This is only used when the directed and has_reverse_cost
- parameters are true.
+ parameters are true (see the above remark about negative costs).
 - directed: true if the graph is directed
 - has_reverse_cost: if true, the reverse_cost column of the SQL
 generated set of rows will be used for the cost of the traversal of
